Added Eclipse project files

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -17,8 +17,8 @@ deployment.jarurl=${dist.jar}
 deployment.method=NONE
 deployment.override.jarurl=false
 dist.dir=dist/${config.active}
-dist.jad=LWUIT_Birthday.jad
-dist.jar=LWUIT_Birthday.jar
+dist.jad=LWUIT_Birthdays.jad
+dist.jar=LWUIT_Birthdays.jar
 dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
