Added icon for Add command

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,8 @@ dist.jar=LWUIT_Birthdays.jar
 dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
-file.reference.S40-with-themes.jar=../../../lwuit-s40/bin/sdk2.0/S40-with-themes.jar
+file.reference.LWUIT_Birthdays-res=res
+file.reference.S40-with-themes.jar=../../../LWUIT-S40/bin/sdk2.0/S40-with-themes.jar
 filter.exclude.tests=false
 filter.excludes=
 filter.more.excludes=**/overview.html,**/package.html
@@ -44,7 +45,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-libs.classpath=${file.reference.S40-with-themes.jar}
+libs.classpath=${file.reference.S40-with-themes.jar};${file.reference.LWUIT_Birthdays-res}
 main.class=
 main.class.class=applet
 manifest.apipermissions=MIDlet-Permissions: javax.microedition.pim.ContactList.read, javax.microedition.pim.EventList.write\n
