--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,7 +54,7 @@ manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
 manifest.midlets=MIDlet-1: BirthdayMidlet,,com.nokia.example.birthdays.BirthdayMidlet\n
-manifest.others=MIDlet-Vendor: Vendor\nMIDlet-Name: Birthdays\nMIDlet-Version: 1.0\n
+manifest.others=Nokia-MIDlet-App-Orientation: manual\nMIDlet-Vendor: Vendor\nMIDlet-Name: Birthdays\nMIDlet-Version: 1.0\n
 manifest.pushregistry=
 name=LWUIT_Birthday
 no.dependencies=false
