--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -23,7 +23,7 @@ dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
 file.reference.LWUIT_Birthdays-res=res
-file.reference.S40-with-themes.jar=../../../LWUIT-S40/bin/sdk2.0/S40-with-themes.jar
+file.reference.S40-with-themes.jar=S40-with-themes.jar
 filter.exclude.tests=false
 filter.excludes=
 filter.more.excludes=**/overview.html,**/package.html
