--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,7 @@ manifest.file=manifest.mf
 manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-1: BirthdayMidlet,,com.nokia.example.birthdays.BirthdayMidlet\n
+manifest.midlets=MIDlet-1: BirthdayMidlet,/app_icon.png,com.nokia.example.birthdays.BirthdayMidlet\n
 manifest.others=Nokia-MIDlet-App-Orientation: manual\nMIDlet-Vendor: Vendor\nMIDlet-Name: Birthdays\nMIDlet-Version: 1.0\n
 manifest.pushregistry=
 name=LWUIT_Birthday
